--- a/TuneHub/src/app/Components/Chat/chat-bot/chat-bot.component.html
+++ b/TuneHub/src/app/Components/Chat/chat-bot/chat-bot.component.html
@@ -1,26 +1,25 @@
 <!-- כפתור צ׳אט עם תמונת אייקון -->
 <div class="chat-toggle" (click)="toggleChat()">
-  <img src="assets/images/chat-ai.webp" alt="צ׳אט" class="chat-icon" />
+  <img src="assets/images/chat-ai.webp" alt="chat" class="chat-icon" />
 </div>
 
 <!-- חלון צ׳אט -->
 <div class="chat-container" [class.open]="isOpen">
   @if (isOpen) {
     <div class="chat-header">
-      <span>צ'אט מוזיקה</span>
+      <span>Music Chat</span>
       <button class="close-btn" (click)="toggleChat()">✖</button>
     </div>
 
     <div class="messages" #messagesContainer>
       @for (msg of messages; track $index) {
      <div class="message-row" [ngClass]="msg.sender">
-  <img class="avatar" [src]="msg.avatar" alt="profile" />
   
   <div class="message-text" [innerHTML]="msg.text"></div> 
 </div>
          
       } @empty {
-        <div class="system-message">התחל שיחה חדשה.</div>
+        <div class="system-message">start a new conversation</div>
       }
     </div>
 
@@ -29,10 +28,10 @@
         type="text"
         [(ngModel)]="userInput"
         name="userInput"
-        placeholder="כתוב הודעה..."
+        placeholder="write your message..."
         autocomplete="off"
       />
-      <button type="submit">שלח</button>
+      <button type="submit">send</button>
     </form>
   }
 </div>
