--- a/TuneHub/src/app/Components/Shared/footer/footer.component.html
+++ b/TuneHub/src/app/Components/Shared/footer/footer.component.html
@@ -1,6 +1,5 @@
 <footer class="tunehub-footer">
   <div class="footer-main">
-    <!-- לוגו ותיאור -->
     <div class="footer-logo-section">
       <mat-icon class="footer-logo-icon">music_note</mat-icon>
       <div class="footer-tagline">
@@ -10,7 +9,6 @@
       </div>
     </div>
 
-    <!-- עמודות ניווט -->
     <div class="footer-columns">
       <div class="footer-column">
         <h4>Platform</h4>
@@ -18,7 +16,6 @@
           <li><a routerLink="/home-page" routerLinkActive="active-link">Home</a></li>
           <li><a routerLink="/posts" routerLinkActive="active-link">Posts & Tracks</a></li>
           <li><a routerLink="/sheets-music" routerLinkActive="active-link">Sheet Music</a></li>
-          <li><a routerLink="/challenges" routerLinkActive="active-link">Challenges</a></li>
         </ul>
       </div>
 
@@ -26,8 +23,8 @@
         <h4>Community</h4>
         <ul>
           <li><a routerLink="/musicians" routerLinkActive="active-link">Find Musicians</a></li>
-          <li><a routerLink="/communities" routerLinkActive="active-link">Communities</a></li>
-          <li><a routerLink="/messages" routerLinkActive="active-link">Messages</a></li>
+          <li><a routerLink="/favorite" routerLinkActive="active-link">Favorites</a></li>
+          <li><a routerLink="/notification" routerLinkActive="active-link">Notification</a></li>
         </ul>
       </div>
 
@@ -35,25 +32,15 @@
         <h4>Learn & Grow</h4>
         <ul>
           <li><a routerLink="/teacher-list" routerLinkActive="active-link">Teachers & Lessons</a></li>
-          <li><a routerLink="/tutorials-courses" routerLinkActive="active-link">Tutorials & Courses</a></li>
-          <li><a routerLink="/practice-tools" routerLinkActive="active-link">Practice Tools</a></li>
-          <li><a routerLink="/skill-assessments" routerLinkActive="active-link">Skill Assessments</a></li>
+          <li><a routerLink="/musicians" routerLinkActive="active-link">Musicians</a></li>
+          <li><a routerLink="/chat-bot" routerLinkActive="active-link">Chat Bot</a></li>
         </ul>
       </div>
 
-      <div class="footer-column">
-        <h4>Marketplace</h4>
-        <ul>
-          <li><a routerLink="/buy-instruments" routerLinkActive="active-link">Buy Instruments</a></li>
-          <li><a routerLink="/rent-equipment" routerLinkActive="active-link">Rent Equipment</a></li>
-          <li><a routerLink="/sell-gear" routerLinkActive="active-link">Sell Your Gear</a></li>
-          <li><a routerLink="/services" routerLinkActive="active-link">Services</a></li>
-        </ul>
-      </div>
+      
     </div>
   </div>
 
-  <!-- רשתות חברתיות -->
   <div class="footer-social">
     <div class="social-icons">
       <a routerLink="/facebook"><mat-icon>facebook</mat-icon></a>
@@ -64,12 +51,9 @@
     </div>
   </div>
 
-  <!-- הורדות -->
   <div class="footer-download">
-    <!-- תוכן להורדות -->
   </div>
 
-  <!-- תחתית -->
   <div class="footer-bottom">
     <p>&copy; 2025 TuneHub Professional. Version 2.0</p>
   </div>
