--- a/TuneHub/src/app/Components/SheetMusic/sheet-music/sheet-music.component.html
+++ b/TuneHub/src/app/Components/SheetMusic/sheet-music/sheet-music.component.html
@@ -6,6 +6,7 @@
 }  <p>Level: {{ sheet.level }}</p>
   <h2>{{ sheet.title }}</h2>
   <!-- <p>Category: {{ sheet.category?.name }}</p> -->
+  <p>Level: {{ sheet.level }}</p>
 
   <div *ngIf="pdfUrl; else noPreview">
     <iframe
