--- a/TuneHub/src/app/Components/Post/posts/posts.component.html
+++ b/TuneHub/src/app/Components/Post/posts/posts.component.html
@@ -43,8 +43,15 @@
         </button> -->
     </section>
 
-
-    @if(displayedPosts.length===0){
+@if (hasMorePosts) {
+    <div class="load-more-container">
+        <button class="button load-more-btn" (click)="loadMore()">
+            טען עוד פוסטים
+            <mat-icon>expand_more</mat-icon>
+        </button>
+    </div>
+}
+@if(displayedPosts.length===0){
     <div class="empty-posts-container">
         <p class="empty-message">עדיין לא פורסמו פוסטים. התחל לשתף את המוזיקה שלך עכשיו!</p>
 
@@ -53,198 +60,121 @@
         העלה את הפוסט הראשון שלך
         <span style="font-size: 1.5em; margin-right: 10px;">⬆️</span>
     </div>
-    }
-    @else{
+}
+@else{
 
     @for(post of displayedPosts; track $index){
 
-    <div class="post-card">
+        <div class="post-card">
 
-        <ng-container *ngIf="!isProfileView || showOnlyMedia === 'all'">
-            <header class="post-header">
-                <img class="avatar" [src]="fileUtils.getImageUrl(post.user?.imageProfilePath)" alt="avatar">
-
-                <div class="user-info">
-                    <span class="username">{{post.user?.name}}</span>
-                    <span class="date">{{post.dateUploaded | date:'short'}}</span>
-                </div>
-
-                <ng-container *ngIf="!isAdmin">
-                <button class="action-btn report-btn" (click)="onReportPost(post.id!)">
-                    <mat-icon>report</mat-icon> דווח
-                </button>
-            </ng-container>
-
-            <div *ngIf="isAdmin" class="post-actions-wrapper">
-                
-                <button class="action-btn more-actions-btn" (click)="toggleAdminActions(post.id!)">
-                    <mat-icon>more_horiz</mat-icon> 
-                </button>
-
-                <div *ngIf="showAdminActions[post.id!]" class="admin-actions-dropdown">
-                    
-                    <button class="action-btn" (click)="onSendWarningNotification(post.id!, post.user!.id!)">
-                        <mat-icon>campaign</mat-icon> Send Warning
-                    </button>
-                    
-                    <button class="action-btn delete-btn" (click)="onDeletePostWithNotification(post.id!, post.user!.id!)">
-                        <mat-icon>delete_forever</mat-icon> Delete & Notify
-                    </button>
-                    
-                </div>
-            </div>
-               
-            </header>
-        </ng-container>
-
-        <div class="post-body">
             <ng-container *ngIf="!isProfileView || showOnlyMedia === 'all'">
-                <h3 class="post-title">{{post.title}}</h3>
-                <p class="post-content">{{post.content}}</p>
+                <header class="post-header">
+                    <img class="avatar" [src]="fileUtils.getImageUrl(post.user?.imageProfilePath)" alt="avatar">
+
+                    <div class="user-info">
+                        <span class="username">{{post.user?.name}}</span>
+                        <span class="date">{{post.dateUploaded | date:'short'}}</span>
+
+                        <div class="star-rating">
+                            @for (star of getStarArray(post.user?.rating); track $index) {
+                                <mat-icon class="star-icon">{{ star }}</mat-icon>
+                            }
+                        </div>
+                        </div>
+
+                    <ng-container *ngIf="!isAdmin">
+                        <button class="action-btn report-btn" (click)="onReportPost(post.id!)">
+                            <mat-icon>report</mat-icon> דווח
+                        </button>
+                    </ng-container>
+
+                    <div *ngIf="isAdmin" class="post-actions-wrapper">
+                        
+                        <button class="action-btn more-actions-btn" (click)="toggleAdminActions(post.id!)">
+                            <mat-icon>more_horiz</mat-icon> 
+                        </button>
+
+                        <div *ngIf="showAdminActions[post.id!]" class="admin-actions-dropdown">
+                            
+                            <button class="action-btn" (click)="onSendWarningNotification(post.id!, post.user!.id!)">
+                                <mat-icon>campaign</mat-icon> Send Warning
+                            </button>
+                            
+                            <button class="action-btn delete-btn" (click)="onDeletePostWithNotification(post.id!, post.user!.id!)">
+                                <mat-icon>delete_forever</mat-icon> Delete & Notify
+                            </button>
+                            
+                        </div>
+                    </div>
+                        
+                </header>
             </ng-container>
 
-            <div class="post-media">
+            <div class="post-body">
                 <ng-container *ngIf="!isProfileView || showOnlyMedia === 'all'">
-                    <div *ngFor="let image of post.imagesBase64" class="image-container">
-                        <img [src]="fileUtils.getImageUrl(image)" class="post-image">
-                    </div>
+                    <h3 class="post-title">{{post.title}}</h3>
+                    <p class="post-content">{{post.content}}</p>
                 </ng-container>
 
-                <div *ngIf="post.audioPath && (showOnlyMedia === 'all' || showOnlyMedia === 'audio')" class="media-track-wrapper">
-                    <h3 *ngIf="showOnlyMedia !== 'all'" class="media-title">{{post.title}}</h3>
-                    <audio controls [src]="getSafeMediaUrl('audio/' + post.audioPath)"></audio>
-                </div>
+                <div class="post-media">
+                    <ng-container *ngIf="!isProfileView || showOnlyMedia === 'all'">
+                        <div *ngFor="let image of post.imagesBase64" class="image-container">
+                            <img [src]="fileUtils.getImageUrl(image)" class="post-image">
+                        </div>
+                    </ng-container>
 
-                <div *ngIf="post.videoPath && (showOnlyMedia === 'all' || showOnlyMedia === 'video')" class="media-video-wrapper">
-                    <h3 *ngIf="showOnlyMedia !== 'all'" class="media-title">{{post.title}}</h3>
-                    <video controls [src]="getSafeMediaUrl('video/' + post.videoPath)"></video>
+                    <div *ngIf="post.audioPath && (showOnlyMedia === 'all' || showOnlyMedia === 'audio')" class="media-track-wrapper">
+                        <h3 *ngIf="showOnlyMedia !== 'all'" class="media-title">{{post.title}}</h3>
+                        <audio controls [src]="getSafeMediaUrl('audio/' + post.audioPath)"></audio>
+                    </div>
+
+                    <div *ngIf="post.videoPath && (showOnlyMedia === 'all' || showOnlyMedia === 'video')" class="media-video-wrapper">
+                        <h3 *ngIf="showOnlyMedia !== 'all'" class="media-title">{{post.title}}</h3>
+                        <video controls [src]="getSafeMediaUrl('video/' + post.videoPath)"></video>
+                    </div>
                 </div>
             </div>
+
+            <ng-container *ngIf="!isProfileView || showOnlyMedia === 'all'">
+            <footer class="post-footer">
+                <span class="stat-item likes" (click)="toggleLike(post)">
+                    <mat-icon style="color: #f0ff6c;" [ngClass]="post.isLiked ? 'liked' : 'not-liked'">
+                        {{ post.isLiked ? 'thumb_up' : 'thumb_up_off_alt' }}
+                    </mat-icon>
+                    <span class="like-count">{{ post.likes }}</span>
+                </span>
+
+                <span class="stat-item hearts" (click)="toggleFavorite(post)">
+                    <mat-icon style="color: #f85e5e;" [ngClass]="post.isFavorite ? 'liked' : 'not-liked'">
+                        {{ post.isFavorite ? 'favorite' : 'favorite_border' }}
+                    </mat-icon>
+
+                    <span class="hearts-count">{{ post.hearts }}</span>
+                </span>
+
+            </footer>
+                <hr>
+            </ng-container>
+
+            <ng-container *ngIf="!isProfileView || showOnlyMedia === 'all'">
+                <div class="comments-actions-row">
+                    <button class="view-comments-btn" (click)="toggleComments(post.id!)">
+                        {{ showComments[post.id!] ? 'סגור תגובות' : 'צפייה בתגובות' }}
+                    </button>
+                    <button class="add-comment-page-btn" (click)="navigateToAddComment(post.id!)">
+                        הוסף תגובה <mat-icon>add_comment</mat-icon>
+                    </button>
+                </div>      
+
+                <div class="comments-wrapper" 
+                    *ngIf="showComments[post.id!]" 
+                    [class.open]="showComments[post.id!]">
+                    
+                    <app-comment [postId]="post.id!"></app-comment>
+                </div>
+            </ng-container>
+
         </div>
-
-        <ng-container *ngIf="!isProfileView || showOnlyMedia === 'all'">
-        <footer class="post-footer">
-            <!-- <div class="stats">
-                        <span>❤️ {{post.hearts}}</span>
-                        <span>👍 {{post.likes}}</span>
-                    </div> -->
-
-
-
-            <span class="stat-item likes" (click)="toggleLike(post)">
-                <mat-icon style="color: #f0ff6c;" [ngClass]="post.isLiked ? 'liked' : 'not-liked'">
-                    {{ post.isLiked ? 'thumb_up' : 'thumb_up_off_alt' }}
-                </mat-icon>
-                <span class="like-count">{{ post.likes }}</span>
-            </span>
-
-            <span class="stat-item hearts" (click)="toggleFavorite(post)">
-                <mat-icon style="color: #f85e5e;" [ngClass]="post.isFavorite ? 'liked' : 'not-liked'">
-                    {{ post.isFavorite ? 'favorite' : 'favorite_border' }}
-                </mat-icon>
-
-                <span class="hearts-count">{{ post.hearts }}</span>
-            </span>
-
-        </footer>
-            <hr>
-        </ng-container>
-
-        <ng-container *ngIf="!isProfileView || showOnlyMedia === 'all'">
-            <div class="comments-actions-row">
-                <button class="view-comments-btn" (click)="toggleComments(post.id!)">
-                    {{ showComments[post.id!] ? 'סגור תגובות' : 'צפייה בתגובות' }}
-                </button>
-                <button class="add-comment-page-btn" (click)="navigateToAddComment(post.id!)">
-                    הוסף תגובה <mat-icon>add_comment</mat-icon>
-                </button>
-            </div>      
-
-            <div class="comments-wrapper" 
-                *ngIf="showComments[post.id!]" 
-                [class.open]="showComments[post.id!]">
-                
-                <app-comment [postId]="post.id!"></app-comment>
-            </div>
-        </ng-container>
-
-    </div>
-}
     }
-    <br><br><br>
-</div>
-
-
-
-
-
-<!-- 
-
-
-<header class="post-header">
-            <img class="avatar" [src]="fileUtils.getImageUrl(post.user?.imageProfilePath)" alt="avatar">
-
-            <div class="user-info">
-                <span class="username">{{post.user?.name}}</span>
-                <span class="date">{{post.dateUploaded | date:'short'}}</span>
-            </div>
-
-           
-        </header>
-
-        <div class="post-body">
-            <h3 class="post-title">{{post.title}}</h3>
-            <p class="post-content">{{post.content}}</p>
-
-            <div class="post-media">
-                <div *ngFor="let image of post.imagesBase64" class="image-container">
-                    <img [src]="fileUtils.getImageUrl(image)" class="post-image">
-                </div>
-
-                <audio *ngIf="post.audioPath" controls [src]="getSafeMediaUrl('audio/' + post.audioPath)"></audio>
-
-                <video *ngIf="post.videoPath" controls [src]="getSafeMediaUrl('video/' + post.videoPath)"></video>
-            </div>
-        </div>
-
-
-
-        <hr>
-
-        <div class="comments-actions-row">
-            <button class="view-comments-btn" (click)="toggleComments(post.id!)">
-                {{ showComments[post.id!] ? 'סגור תגובות' : 'צפייה בתגובות' }}
-            </button>
-            <button class="add-comment-page-btn" (click)="navigateToAddComment(post.id!)">
-                הוסף תגובה <mat-icon>add_comment</mat-icon>
-            </button>
-        </div>
-
-        <div class="comments-wrapper" *ngIf="showComments[post.id!]" [class.open]="showComments[post.id!]">
-
-            <app-comment [postId]="post.id!"></app-comment>
-        </div>
-
-    </div>
-
-
-    <!-- <footer class="post-footer">
-        <div class="stats">
-            <span>❤️ {{post.hearts}}</span>
-            <span>👍 {{post.likes}}</span>
-        </div> -->
-        <!-- 
-            <app-like-button
-        [targetType]="'POST'" 
-        [targetId]="post.id"
-        [initialLikeCount]="post.likeCount"
-        [isLikedByUser]="post.isLikedByCurrentUser"> 
-    </app-like-button> -->
-    <!-- </footer> -->
-
-    <hr>
-
-
-    <!-- }} -->
-
-    <!-- <br><br><br> --> 
+}
+<br><br><br>
